Update style sheet. Fix stretching images issue with example. Do some other stuff.

--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -19,3 +19,30 @@ h1, h2, h3 {
 .rst-content .highlight>pre {
     line-height: 1.5;
 }
+.wy-nav-content-wrap {
+    background: #fff;
+}
+.wy-side-nav-search {
+    background-color: #931a2a;
+}
+.wy-side-nav-search > div.version {
+    color: #FFF;
+}
+div[class^='highlight'] pre {
+    white-space: pre;
+    margin: 0;
+    padding: 12px 12px;
+    font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
+    font-size: 14px;
+    line-height: 1.5;
+    display: block;
+    overflow: auto;
+    color: #404040;
+}
+.rst-content img {
+    display: block;
+    max-width: 170px;
+    max-height: 150px;
+    width: auto;
+    height: auto;
+}
